--- a/.env
+++ b/.env
@@ -3,8 +3,8 @@ APP_NAME="Rido"
 FLAVOR="dev"
 
 # Firebase
-FIREBASE_API_KEY="AIzaSy..."
-FIREBASE_PROJECT_ID="rido-beta"
+FIREBASE_API_KEY="AIzaSyDRB-M2zuETbUlCbgQvdTcnPmN-_AojEwU"
+FIREBASE_PROJECT_ID="rido-beta-pilot-2026"
 
 # Maps
 OSM_TILE_SERVER="https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png"
