--- a/ios/Runner/GoogleService-Info.plist
+++ b/ios/Runner/GoogleService-Info.plist
@@ -2,33 +2,29 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>CLIENT_ID</key>
-	<string>123456789012-abcdef.apps.googleusercontent.com</string>
-	<key>REVERSED_CLIENT_ID</key>
-	<string>com.googleusercontent.apps.123456789012-abcdef</string>
 	<key>API_KEY</key>
-	<string>AIzaSy...</string>
+	<string>AIzaSyAgiTVPttvRabW34ur3o0p39BetPDFPcdU</string>
 	<key>GCM_SENDER_ID</key>
-	<string>123456789012</string>
+	<string>150223772465</string>
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
 	<string>com.rido.app</string>
 	<key>PROJECT_ID</key>
-	<string>rido-beta</string>
+	<string>rido-beta-pilot-2026</string>
 	<key>STORAGE_BUCKET</key>
-	<string>rido-beta.appspot.com</string>
+	<string>rido-beta-pilot-2026.firebasestorage.app</string>
 	<key>IS_ADS_ENABLED</key>
-	<false/>
+	<false></false>
 	<key>IS_ANALYTICS_ENABLED</key>
-	<false/>
+	<false></false>
 	<key>IS_APPINVITE_ENABLED</key>
-	<true/>
+	<true></true>
 	<key>IS_GCM_ENABLED</key>
-	<true/>
+	<true></true>
 	<key>IS_SIGNIN_ENABLED</key>
-	<true/>
+	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:123456789012:ios:1234567890abcdef</string>
+	<string>1:150223772465:ios:99375f5380dba42f2b6e10</string>
 </dict>
 </plist>
