feat: Enhance UI/UX, Upgrade Destination Search & Fix Android Launch
- UI: Gradient Sidebar, Red Relocate Icon, Dark Mode polishes.

- Feature: Advanced Destination Search with Google Places Autocomplete & Debounce.

- Feature: Map Confirmation Screen with Pin & Surround Photo capture.

- Fix: AndroidManifest package attribute (launch error).

- Fix: Navigation & User Data display.

--- a/.env
+++ b/.env
@@ -1,17 +1,1 @@
-# App Config
-APP_NAME="Rido"
-FLAVOR="dev"
-
-# Firebase
-FIREBASE_API_KEY="AIzaSyDRB-M2zuETbUlCbgQvdTcnPmN-_AojEwU"
-FIREBASE_PROJECT_ID="rido-beta-pilot-2026"
-
-# Maps
-OSM_TILE_SERVER="https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png"
-GOOGLE_MAPS_API_KEY="AIzaSy..."
-
-# AI
-GEMINI_API_KEY="AIzaSy..."
-
-# Payments
-RAZORPAY_KEY_ID="rzp_test_..."
+GOOGLE_MAPS_API_KEY=AIzaSyCirMlYvLCV-XyNco9C0gakqUiDfrnq2a8
