--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,86 +21,102 @@ version: 1.0.0+1
 environment:
   sdk: '>=3.2.0 <4.0.0'
 
-# Dependencies specify other packages that your package needs in order to work.
-# To automatically upgrade your package dependencies to the latest versions
-# consider running `flutter pub upgrade --major-versions`. Alternatively,
-# dependencies can be manually updated by changing the version numbers below to
-# the latest version available on pub.dev. To see which dependencies have newer
-# versions available, run `flutter pub outdated`.
 dependencies:
   flutter:
     sdk: flutter
 
-  # Architecture & State Management
-  flutter_riverpod: ^2.4.9
-  freezed_annotation: ^2.4.1
-  json_annotation: ^4.8.1
-  go_router: ^13.0.1
+  # Core Architecture
+  flutter_riverpod: ^2.5.1
+  riverpod_annotation: ^2.3.5
+  go_router: ^14.0.0
+  fquery: ^1.2.0
+  sizer: ^2.0.15 # MANDATORY
+
+  # UI Ecosystem (The Quad-Stack)
+  shadcn_ui: 
+  getwidget: 
+  shadcn_flutter: any 
+  forui: any
+  
+  # Animations & Interactions
+  lottie:
+  flutter_svg: ^2.0.10
+  animations: 
+  page_transition: 
+  motion: 
+  flutter_map_animations: 
+  haptic_feedback: 
+
+  # Maps & Navigation
+  # Maps & Navigation
+  google_maps_flutter: ^2.5.0 
+  geolocator: ^13.0.0 
+  # navigation_map: ^0.0.1 # Warning: These might be obscure, checking availability via pub get
+  # nb_navigation_flutter: ^0.0.1
+  # google_maps_widget: ^0.0.1
+  
+  # Utilities
+  logger: 
+  talker: 
+  talker_flutter: 
+  internet_connection_checker_plus: 
+  permission_handler: 
+  keyboard_safe: 
+  pinput: 
+  awesome_snackbar_content: 
+  toggle_switch: 
+  smart_tooltip: 
+  multilingual: 
+  intl: 
+  introduction_screen: 
+  image_picker:
   
   # Backend (Firebase)
-  firebase_core: ^2.24.2
-  firebase_auth: ^4.16.0
-  cloud_firestore: ^4.14.0
-  cloud_functions: ^4.6.0
-  firebase_storage: ^11.6.0
-  firebase_messaging: ^14.7.5
+  firebase_core: ^3.0.0
+  firebase_auth: ^5.0.0
+  cloud_firestore: ^5.0.0
+  cloud_functions: ^5.0.0
+  firebase_storage: ^12.0.0
+  firebase_messaging: ^15.0.0
+  firebase_crashlytics: ^4.0.0
+  firebase_analytics: ^11.0.0
+  firebase_performance: ^0.10.0
+  firebase_app_check: ^0.3.0
   
   # AI
   google_generative_ai: ^0.2.0
 
-  # UI & Maps
-  flutter_map: ^6.1.0
+  # Assets & Fonts
   google_fonts: ^6.1.0
-  cupertino_icons: ^1.0.2
+  cupertino_icons: ^1.0.6
+  
+  # Generation
+  freezed_annotation: ^2.4.1
+  json_annotation: ^4.8.1
+  shared_preferences: ^2.5.4
+  dotted_border: ^3.1.0
+  flutter_dotenv: ^6.0.0
+  http: ^1.6.0
+  uuid: ^4.5.2
+  geocoding: ^4.0.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^2.0.0
+  flutter_lints: ^3.0.0
   build_runner: ^2.4.8
-  freezed: ^2.4.6
+  freezed: ^2.4.7
   json_serializable: ^6.7.1
+  riverpod_generator: ^2.4.0
   flutter_launcher_icons: ^0.13.1
-  flutter_native_splash: ^2.3.7
+  flutter_native_splash: ^2.3.10
 
-# For information on the generic Dart part of this file, see the
-# following page: https://dart.dev/tools/pub/pubspec
 
-# The following section is specific to Flutter packages.
+
 flutter:
-
-  # The following line ensures that the Material Icons font is
-  # included with your application, so that you can use the icons in
-  # the material Icons class.
   uses-material-design: true
-
-  # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
-
-  # An image asset can refer to one or more resolution-specific "variants", see
-  # https://flutter.dev/to/resolution-aware-images
-
-  # For details regarding adding assets from package dependencies, see
-  # https://flutter.dev/to/asset-from-package
-
-  # To add custom fonts to your application, add a fonts section here,
-  # in this "flutter" section. Each entry in this list should have a
-  # "family" key with the font family name, and a "fonts" key with a
-  # list giving the asset and other descriptors for the font. For
-  # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
-  # For details regarding fonts from package dependencies,
-  # see https://flutter.dev/to/font-from-package
+  assets:
+    - .env
+    - assets/lottie/
+    - assets/images/
+    - assets/
